--- a/index.html
+++ b/index.html
@@ -48,36 +48,43 @@
         <table>
             <tr>
                 <th></th>
-                <th>Flexion</th>
-                <th>Extension</th>
-                <th>Ankylosis</th>
+                <th><strong>Flexion</strong></th>
+                <th><strong>Extension</strong></th>
+                <th><strong>Ankylosis</strong></th>
                 <th>Imp%</th>
             </tr>
             <tr>
                 <td>Angle°</td>
                 <td><input type="number" id="wrist-flexion-angle"></td>
                 <td><input type="number" id="wrist-extension-angle"></td>
-                <td></td>
+                <td><input type="number" id="wrist-flexext-ankylosis-angle"></td>
                 <td rowspan="2" id="wrist-flexext-imp"></td>
             </tr>
             <tr>
                 <td>Imp%</td>
                 <td id="wrist-flexion-imp"></td>
                 <td id="wrist-extension-imp"></td>
-                <td></td>
+                <td id="wrist-flexext-ankylosis-imp"></td>
+            </tr>
+            <tr>
+                <th></th>
+                <th><strong>Radial Deviation</strong></th>
+                <th><strong>Ulnar Deviation</strong></th>
+                <th><strong>Ankylosis</strong></th>
+                <th>Imp%</th>
             </tr>
             <tr>
                 <td>Angle°</td>
-                <td>RD: <input type="number" id="wrist-rd-angle"></td>
-                <td>UD: <input type="number" id="wrist-ud-angle"></td>
-                <td></td>
+                <td><input type="number" id="wrist-rd-angle"></td>
+                <td><input type="number" id="wrist-ud-angle"></td>
+                <td><input type="number" id="wrist-rdud-ankylosis-angle"></td>
                 <td rowspan="2" id="wrist-rdud-imp"></td>
             </tr>
             <tr>
                 <td>Imp%</td>
                 <td id="wrist-rd-imp"></td>
                 <td id="wrist-ud-imp"></td>
-                <td></td>
+                <td id="wrist-rdud-ankylosis-imp"></td>
             </tr>
         </table>
         <p class="total">Total Wrist Impairment: <span id="wrist-total-imp"></span>%</p>
@@ -88,36 +95,43 @@
         <table>
             <tr>
                 <th></th>
-                <th>Flexion</th>
-                <th>Extension</th>
-                <th>Ankylosis</th>
+                <th><strong>Flexion</strong></th>
+                <th><strong>Extension</strong></th>
+                <th><strong>Ankylosis</strong></th>
                 <th>Imp%</th>
             </tr>
             <tr>
                 <td>Angle°</td>
                 <td><input type="number" id="elbow-flexion-angle"></td>
                 <td><input type="number" id="elbow-extension-angle"></td>
-                <td></td>
+                <td><input type="number" id="elbow-flexext-ankylosis-angle"></td>
                 <td rowspan="2" id="elbow-flexext-imp"></td>
             </tr>
             <tr>
                 <td>Imp%</td>
                 <td id="elbow-flexion-imp"></td>
                 <td id="elbow-extension-imp"></td>
-                <td></td>
+                <td id="elbow-flexext-ankylosis-imp"></td>
+            </tr>
+            <tr>
+                <th></th>
+                <th><strong>Pronation</strong></th>
+                <th><strong>Supination</strong></th>
+                <th><strong>Ankylosis</strong></th>
+                <th>Imp%</th>
             </tr>
             <tr>
                 <td>Angle°</td>
-                <td>Pronation: <input type="number" id="elbow-pronation-angle"></td>
-                <td>Supination: <input type="number" id="elbow-supination-angle"></td>
-                <td></td>
+                <td><input type="number" id="elbow-pronation-angle"></td>
+                <td><input type="number" id="elbow-supination-angle"></td>
+                <td><input type="number" id="elbow-prosup-ankylosis-angle"></td>
                 <td rowspan="2" id="elbow-prosup-imp"></td>
             </tr>
             <tr>
                 <td>Imp%</td>
                 <td id="elbow-pronation-imp"></td>
                 <td id="elbow-supination-imp"></td>
-                <td></td>
+                <td id="elbow-prosup-ankylosis-imp"></td>
             </tr>
         </table>
         <p class="total">Total Elbow Impairment: <span id="elbow-total-imp"></span>%</p>
@@ -128,49 +142,63 @@
         <table>
             <tr>
                 <th></th>
-                <th>Flexion</th>
-                <th>Extension</th>
-                <th>Ankylosis</th>
+                <th><strong>Flexion</strong></th>
+                <th><strong>Extension</strong></th>
+                <th><strong>Ankylosis</strong></th>
                 <th>Imp%</th>
             </tr>
             <tr>
                 <td>Angle°</td>
                 <td><input type="number" id="shoulder-flexion-angle"></td>
                 <td><input type="number" id="shoulder-extension-angle"></td>
-                <td></td>
+                <td><input type="number" id="shoulder-flexext-ankylosis-angle"></td>
                 <td rowspan="2" id="shoulder-flexext-imp"></td>
             </tr>
             <tr>
                 <td>Imp%</td>
                 <td id="shoulder-flexion-imp"></td>
                 <td id="shoulder-extension-imp"></td>
-                <td></td>
+                <td id="shoulder-flexext-ankylosis-imp"></td>
+            </tr>
+            <tr>
+                <th></th>
+                <th><strong>Abduction</strong></th>
+                <th><strong>Adduction</strong></th>
+                <th><strong>Ankylosis</strong></th>
+                <th>Imp%</th>
             </tr>
             <tr>
                 <td>Angle°</td>
-                <td>Adduction: <input type="number" id="shoulder-adduction-angle"></td>
-                <td>Abduction: <input type="number" id="shoulder-abduction-angle"></td>
-                <td></td>
-                <td rowspan="2" id="shoulder-addabd-imp"></td>
+                <td><input type="number" id="shoulder-abduction-angle"></td>
+                <td><input type="number" id="shoulder-adduction-angle"></td>
+                <td><input type="number" id="shoulder-abdadd-ankylosis-angle"></td>
+                <td rowspan="2" id="shoulder-abdadd-imp"></td>
             </tr>
             <tr>
                 <td>Imp%</td>
-                <td id="shoulder-adduction-imp"></td>
                 <td id="shoulder-abduction-imp"></td>
-                <td></td>
+                <td id="shoulder-adduction-imp"></td>
+                <td id="shoulder-abdadd-ankylosis-imp"></td>
+            </tr>
+            <tr>
+                <th></th>
+                <th><strong>Internal Rotation</strong></th>
+                <th><strong>External Rotation</strong></th>
+                <th><strong>Ankylosis</strong></th>
+                <th>Imp%</th>
             </tr>
             <tr>
                 <td>Angle°</td>
-                <td>Int Rot: <input type="number" id="shoulder-introt-angle"></td>
-                <td>Ext Rot: <input type="number" id="shoulder-extrot-angle"></td>
-                <td></td>
+                <td><input type="number" id="shoulder-introt-angle"></td>
+                <td><input type="number" id="shoulder-extrot-angle"></td>
+                <td><input type="number" id="shoulder-rotation-ankylosis-angle"></td>
                 <td rowspan="2" id="shoulder-rotation-imp"></td>
             </tr>
             <tr>
                 <td>Imp%</td>
                 <td id="shoulder-introt-imp"></td>
                 <td id="shoulder-extrot-imp"></td>
-                <td></td>
+                <td id="shoulder-rotation-ankylosis-imp"></td>
             </tr>
         </table>
         <p class="total">Total Shoulder Impairment: <span id="shoulder-total-imp"></span>%</p>
