--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #f0f0f0; /* Light grey background */
+            background-color: #f0f0f0;
         }
         h1 {
             text-align: center;
@@ -20,7 +20,7 @@
             border-radius: 5px;
             padding: 15px;
             margin-bottom: 20px;
-            background-color: white; /* White background for cards */
+            background-color: white;
         }
         .card h2 {
             margin-top: 0;
@@ -28,19 +28,33 @@
         table {
             width: 100%;
             border-collapse: collapse;
+            table-layout: fixed;
         }
         th, td {
             border: 1px solid #ccc;
             padding: 8px;
             text-align: left;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
         th {
-            background-color: #007bff; /* Blue background for header rows */
-            color: white; /* White text for header rows */
+            background-color: #007bff;
+            color: white;
             font-weight: bold;
         }
+        th:first-child, td:first-child {
+            width: 15%;
+        }
+        th:nth-child(2), th:nth-child(3), th:nth-child(4),
+        td:nth-child(2), td:nth-child(3), td:nth-child(4) {
+            width: 25%;
+        }
+        th:last-child, td:last-child {
+            width: 10%;
+        }
         input[type="number"] {
-            width: 60px;
+            width: 90%;
+            box-sizing: border-box;
         }
         .total {
             font-weight: bold;
