--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         th, td {
             border: 1px solid #ccc;
             padding: 8px;
-            text-align: left;
+            text-align: center;
+            vertical-align: middle;
             overflow: hidden;
             text-overflow: ellipsis;
         }
@@ -53,8 +54,11 @@
             width: 10%;
         }
         input[type="number"] {
-            width: 90%;
+            width: 60%;
             box-sizing: border-box;
+            text-align: center;
+            margin: 0 auto;
+            display: block;
         }
         .total {
             font-weight: bold;
