--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <td id="wrist-rdud-ankylosis-imp">0</td>
             </tr>
         </table>
-        <p class="total">Total Wrist Impairment: <span id="wrist-total-imp">0</span>%</p>
+        <p class="total">Total Wrist Impairment: <span id="wrist-total-imp">0 UE = 0 WPI</span></p>
     </div>
 
     <div class="card" id="elbow">
@@ -175,7 +175,7 @@
                 <td id="elbow-prosup-ankylosis-imp">0</td>
             </tr>
         </table>
-        <p class="total">Total Elbow Impairment: <span id="elbow-total-imp">0</span>%</p>
+        <p class="total">Total Elbow Impairment: <span id="elbow-total-imp">0 UE = 0 WPI</span></p>
     </div>
 
     <div class="card" id="shoulder">
@@ -242,7 +242,7 @@
                 <td id="shoulder-rotation-ankylosis-imp">0</td>
             </tr>
         </table>
-        <p class="total">Total Shoulder Impairment: <span id="shoulder-total-imp">0</span>%</p>
+        <p class="total">Total Shoulder Impairment: <span id="shoulder-total-imp">0 UE = 0 WPI</span></p>
     </div>
 
     <button id="clearAllButton" class="clear-button">Clear All</button>
@@ -256,7 +256,7 @@
             impDisplays.forEach(display => display.textContent = '0');
 
             const totalImps = document.querySelectorAll('[id$="-total-imp"]');
-            totalImps.forEach(total => total.textContent = '0');
+            totalImps.forEach(total => total.textContent = '0 UE = 0 WPI');
         }
 
         document.getElementById('clearAllButton').addEventListener('click', clearAll);
