--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         }
         .total {
             font-weight: bold;
+            text-align: center;
         }
         .clear-button {
             display: block;
@@ -128,7 +129,7 @@
                 <td id="wrist-rdud-ankylosis-imp">0</td>
             </tr>
         </table>
-        <p class="total">Total Wrist Impairment: <span id="wrist-total-imp">0 UE = 0 WPI</span></p>
+        <p class="total">Total: <span id="wrist-total-imp">0 UE = 0 WPI</span></p>
     </div>
 
     <div class="card" id="elbow">
@@ -175,7 +176,7 @@
                 <td id="elbow-prosup-ankylosis-imp">0</td>
             </tr>
         </table>
-        <p class="total">Total Elbow Impairment: <span id="elbow-total-imp">0 UE = 0 WPI</span></p>
+        <p class="total">Total: <span id="elbow-total-imp">0 UE = 0 WPI</span></p>
     </div>
 
     <div class="card" id="shoulder">
@@ -242,7 +243,7 @@
                 <td id="shoulder-rotation-ankylosis-imp">0</td>
             </tr>
         </table>
-        <p class="total">Total Shoulder Impairment: <span id="shoulder-total-imp">0 UE = 0 WPI</span></p>
+        <p class="total">Total: <span id="shoulder-total-imp">0 UE = 0 WPI</span></p>
     </div>
 
     <button id="clearAllButton" class="clear-button">Clear All</button>
