--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             padding: 15px;
             margin-bottom: 20px;
             background-color: white;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         .card h2 {
             margin-top: 0;
