--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             text-align: center;
         }
         .card {
-            border: 1px solid #ccc;
+            border: 1px solid white; /* White border that matches the card background */
             border-radius: 5px;
             padding: 15px;
             margin-bottom: 20px;
