--- a/index.html
+++ b/index.html
@@ -264,6 +264,6 @@
         document.getElementById('clearAllButton').addEventListener('click', clearAll);
 
         // Additional JavaScript for calculations will be added here
-    </script>
-</body>
+        <script src="ue-calculator-script.js"></script>
+    </body>
 </html>
