--- a/index.html
+++ b/index.html
@@ -1486,7 +1486,7 @@ function calculateJointImpairment(joint) {
 
 function calculateMovementImpairment(joint, movement, dataArray) {
     console.log(`Calculating ${movement} impairment for ${joint}`);
-    console.log('Data Array:', dataArray); // Log the entire data array
+    console.log('Data Array:', dataArray);
 
     const movements = movement === 'flexext' ? ['flexion', 'extension'] :
                       movement === 'rdud' ? ['rd', 'ud'] :
@@ -1494,7 +1494,7 @@ function calculateMovementImpairment(joint, movement, dataArray) {
                       movement === 'abdadd' ? ['abduction', 'adduction'] :
                       movement === 'rotation' ? ['introt', 'extrot'] : [];
 
-    console.log('Movements:', movements); // Log the movements being processed
+    console.log('Movements:', movements);
 
     let maxImp = 0;
 
@@ -1507,17 +1507,30 @@ function calculateMovementImpairment(joint, movement, dataArray) {
             const angle = parseFloat(inputElement.value);
             console.log(`Angle for ${mov}: ${angle}`);
 
+            let angleKey = mov;
             let impairmentKey = `ue${mov.charAt(0).toUpperCase() + mov.slice(1)}`;
             
             // Special handling for rd, ud, introt, and extrot
-            if (mov === 'rd') impairmentKey = 'ueRadialDeviation';
-            if (mov === 'ud') impairmentKey = 'ueUlnarDeviation';
-            if (mov === 'introt') impairmentKey = 'ueInternalRotation';
-            if (mov === 'extrot') impairmentKey = 'ueExternalRotation';
+            if (mov === 'rd') {
+                angleKey = 'radialDeviation';
+                impairmentKey = 'ueRadialDeviation';
+            }
+            if (mov === 'ud') {
+                angleKey = 'ulnarDeviation';
+                impairmentKey = 'ueUlnarDeviation';
+            }
+            if (mov === 'introt') {
+                angleKey = 'internalRotation';
+                impairmentKey = 'ueInternalRotation';
+            }
+            if (mov === 'extrot') {
+                angleKey = 'externalRotation';
+                impairmentKey = 'ueExternalRotation';
+            }
 
-            console.log(`Impairment key: ${impairmentKey}`);
+            console.log(`Angle key: ${angleKey}, Impairment key: ${impairmentKey}`);
 
-            const imp = calculateImpairment(angle, dataArray, mov, impairmentKey);
+            const imp = calculateImpairment(angle, dataArray, angleKey, impairmentKey);
             console.log(`Calculated impairment for ${mov}: ${imp}`);
 
             const impElementId = `${joint}-${mov}-imp`;
@@ -1564,11 +1577,19 @@ function calculateMovementImpairment(joint, movement, dataArray) {
 }
 
 function calculateImpairment(angle, dataArray, angleKey, impairmentKey) {
-    if (isNaN(angle)) return 0;
+    console.log(`Calculating impairment for angle: ${angle}, angleKey: ${angleKey}, impairmentKey: ${impairmentKey}`);
+    console.log('Data Array:', dataArray);
+
+    if (isNaN(angle)) {
+        console.log('Angle is NaN, returning 0');
+        return 0;
+    }
 
     for (let i = 0; i < dataArray.length; i++) {
         const currentAngle = dataArray[i][angleKey];
         const nextAngle = i < dataArray.length - 1 ? dataArray[i + 1][angleKey] : null;
+
+        console.log(`Checking range: currentAngle = ${currentAngle}, nextAngle = ${nextAngle}`);
 
         if (
             (typeof currentAngle === 'string' && currentAngle.startsWith('>') && angle >= parseFloat(currentAngle.substring(1))) ||
@@ -1576,10 +1597,12 @@ function calculateImpairment(angle, dataArray, angleKey, impairmentKey) {
             angle === currentAngle ||
             (nextAngle !== null && angle > currentAngle && angle <= nextAngle)
         ) {
+            console.log(`Match found. Returning impairment: ${dataArray[i][impairmentKey]}`);
             return dataArray[i][impairmentKey];
         }
     }
 
+    console.log('No match found, returning 0');
     return 0;
 }
 
